가이드 작업중

--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -2,6 +2,10 @@
 
 // main 
 .visual {
-	height: 600px;
-	background-color: cyan;
+	.video {
+		.video__container {
+			height: 600px;
+			background-color: cyan;
+		}
+	}
 } 
