--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -1,18 +1,14 @@
-// logo
-.logo {
-	.logo__link {
-		display: block;
-	}
-}
-
 // header
 .header {
 	position: fixed;
 	left: 0;
 	top: 0;
+	z-index: 100;
 	width: 100%;
-	height: 60px;
-	background-color: pink;
+	.header__container {
+		display: flex;
+		padding: 40px 30px 0 40px;
+	}
 }
 
 // footer
