--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -7,7 +7,87 @@
 	width: 100%;
 	.header__container {
 		display: flex;
-		padding: 40px 30px 0 40px;
+		justify-content: center;
+		position: relative;
+		padding-top: 30px;
+		.logo {
+			position: absolute;
+			left: 40px;
+			top: 42px;
+		}
+	}
+	.header__right {
+		position: absolute;
+		right: 30px;
+		top: 33px;
+	}
+}
+
+// nav
+.nav {
+	.nav__container {
+		display: flex;
+	}
+	.nav__trigger {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 117px;
+		height: 33px;
+		border: 1px solid #000;
+		border-radius: 33px;
+		background-color: #fff;
+		font-size: 18px;
+		text-align: center;
+		&:not(:first-child) {
+			margin-left: 10px;
+		}
+		.nav__ico {
+			display: flex;
+			position: relative;
+			width: 27px;
+			height: 8px;
+			margin-right: 9px;
+			&:before,
+			&:after {
+				content: '';
+				display: block;
+				position: absolute;
+				left: 0;
+				width: 100%;
+				height: 1px;
+				background-color: #000;
+			}
+			&:before {
+				top: 0;
+			}
+			&:after {
+				top: 100%;
+			}
+		}
+	}
+	.nav__trigger--active {
+		background-color: #000;
+		color: #fff;
+		.nav__ico {
+			&:before,
+			&:after {
+				top: 50%;
+				background-color: #fff;
+			}
+		}
+	}
+	.nav__layer {
+		position: absolute;
+		left: 50%;
+		top: 15px;
+		z-index: -1;
+		width: 380px;
+		height: 600px;
+		margin-left: -190px;
+		border: 1px solid #000;
+		border-radius: 42px;
+		background-color: #fff;
 	}
 }
 
