--- a/src/assets/css/_carousel.scss
+++ b/src/assets/css/_carousel.scss
@@ -3,10 +3,45 @@
 // carousel
 .carousel {
 	.carousel__mask {
+		display: flex;
+		align-items: center;
 		overflow: hidden;
+		background: {
+			repeat: no-repeat;
+			position: 50% 0;
+		};
 	}
 	.carousel__loop {
 		white-space: nowrap;
-		text-transform: uppercase;
+		&:first-child {
+			animation: menuCarousel01 30s linear infinite;
+			animation-delay: -30s;
+		}
+		&:last-child {
+			animation: menuCarousel02 30s linear infinite;
+			animation-delay: -15s;
+		}
+		.carousel__text {
+			margin: 0 28px;
+			font-size: 24px;
+		}
+	}
+}
+
+@keyframes menuCarousel01 {
+	0% {
+		@include mixins.translate(100%, 0);
+	}
+	100% {
+		@include mixins.translate(-100%, 0);
+	}
+}
+
+@keyframes menuCarousel02 {
+	0% {
+		@include mixins.translate(0, 0);
+	}
+	100% {
+		@include mixins.translate(-200%, 0);
 	}
 }
