--- a/src/assets/css/_sprite.scss
+++ b/src/assets/css/_sprite.scss
@@ -9,28 +9,50 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
+$bg-header-funkplay-off-name: 'bg_header_funkplay_off';
+$bg-header-funkplay-off-x: 0px;
+$bg-header-funkplay-off-y: 14px;
+$bg-header-funkplay-off-offset-x: 0px;
+$bg-header-funkplay-off-offset-y: -14px;
+$bg-header-funkplay-off-width: 47px;
+$bg-header-funkplay-off-height: 32px;
+$bg-header-funkplay-off-total-width: 161px;
+$bg-header-funkplay-off-total-height: 46px;
+$bg-header-funkplay-off-image: '../images/ico/icons.png';
+$bg-header-funkplay-off: (0px, 14px, 0px, -14px, 47px, 32px, 161px, 46px, '../images/ico/icons.png', 'bg_header_funkplay_off', );
+$bg-header-funkplay-on-name: 'bg_header_funkplay_on';
+$bg-header-funkplay-on-x: 47px;
+$bg-header-funkplay-on-y: 14px;
+$bg-header-funkplay-on-offset-x: -47px;
+$bg-header-funkplay-on-offset-y: -14px;
+$bg-header-funkplay-on-width: 47px;
+$bg-header-funkplay-on-height: 32px;
+$bg-header-funkplay-on-total-width: 161px;
+$bg-header-funkplay-on-total-height: 46px;
+$bg-header-funkplay-on-image: '../images/ico/icons.png';
+$bg-header-funkplay-on: (47px, 14px, -47px, -14px, 47px, 32px, 161px, 46px, '../images/ico/icons.png', 'bg_header_funkplay_on', );
 $bg-select-name: 'bg_select';
-$bg-select-x: 15px;
+$bg-select-x: 109px;
 $bg-select-y: 14px;
-$bg-select-offset-x: -15px;
+$bg-select-offset-x: -109px;
 $bg-select-offset-y: -14px;
 $bg-select-width: 11px;
 $bg-select-height: 6px;
 $bg-select-total-width: 161px;
-$bg-select-total-height: 29px;
+$bg-select-total-height: 46px;
 $bg-select-image: '../images/ico/icons.png';
-$bg-select: (15px, 14px, -15px, -14px, 11px, 6px, 161px, 29px, '../images/ico/icons.png', 'bg_select', );
+$bg-select: (109px, 14px, -109px, -14px, 11px, 6px, 161px, 46px, '../images/ico/icons.png', 'bg_select', );
 $ico-header-search-name: 'ico_header_search';
-$ico-header-search-x: 0px;
+$ico-header-search-x: 94px;
 $ico-header-search-y: 14px;
-$ico-header-search-offset-x: 0px;
+$ico-header-search-offset-x: -94px;
 $ico-header-search-offset-y: -14px;
 $ico-header-search-width: 15px;
 $ico-header-search-height: 15px;
 $ico-header-search-total-width: 161px;
-$ico-header-search-total-height: 29px;
+$ico-header-search-total-height: 46px;
 $ico-header-search-image: '../images/ico/icons.png';
-$ico-header-search: (0px, 14px, 0px, -14px, 15px, 15px, 161px, 29px, '../images/ico/icons.png', 'ico_header_search', );
+$ico-header-search: (94px, 14px, -94px, -14px, 15px, 15px, 161px, 46px, '../images/ico/icons.png', 'ico_header_search', );
 $logo-name: 'logo';
 $logo-x: 0px;
 $logo-y: 0px;
@@ -39,31 +61,53 @@ $logo-offset-y: 0px;
 $logo-width: 161px;
 $logo-height: 14px;
 $logo-total-width: 161px;
-$logo-total-height: 29px;
+$logo-total-height: 46px;
 $logo-image: '../images/ico/icons.png';
-$logo: (0px, 0px, 0px, 0px, 161px, 14px, 161px, 29px, '../images/ico/icons.png', 'logo', );
+$logo: (0px, 0px, 0px, 0px, 161px, 14px, 161px, 46px, '../images/ico/icons.png', 'logo', );
+$bg-header-funkplay-off-2x-name: 'bg_header_funkplay_off@2x';
+$bg-header-funkplay-off-2x-x: 0px;
+$bg-header-funkplay-off-2x-y: 28px;
+$bg-header-funkplay-off-2x-offset-x: 0px;
+$bg-header-funkplay-off-2x-offset-y: -28px;
+$bg-header-funkplay-off-2x-width: 94px;
+$bg-header-funkplay-off-2x-height: 64px;
+$bg-header-funkplay-off-2x-total-width: 322px;
+$bg-header-funkplay-off-2x-total-height: 92px;
+$bg-header-funkplay-off-2x-image: '../images/ico/icons@2x.png';
+$bg-header-funkplay-off-2x: (0px, 28px, 0px, -28px, 94px, 64px, 322px, 92px, '../images/ico/icons@2x.png', 'bg_header_funkplay_off@2x', );
+$bg-header-funkplay-on-2x-name: 'bg_header_funkplay_on@2x';
+$bg-header-funkplay-on-2x-x: 94px;
+$bg-header-funkplay-on-2x-y: 28px;
+$bg-header-funkplay-on-2x-offset-x: -94px;
+$bg-header-funkplay-on-2x-offset-y: -28px;
+$bg-header-funkplay-on-2x-width: 94px;
+$bg-header-funkplay-on-2x-height: 64px;
+$bg-header-funkplay-on-2x-total-width: 322px;
+$bg-header-funkplay-on-2x-total-height: 92px;
+$bg-header-funkplay-on-2x-image: '../images/ico/icons@2x.png';
+$bg-header-funkplay-on-2x: (94px, 28px, -94px, -28px, 94px, 64px, 322px, 92px, '../images/ico/icons@2x.png', 'bg_header_funkplay_on@2x', );
 $bg-select-2x-name: 'bg_select@2x';
-$bg-select-2x-x: 30px;
+$bg-select-2x-x: 218px;
 $bg-select-2x-y: 28px;
-$bg-select-2x-offset-x: -30px;
+$bg-select-2x-offset-x: -218px;
 $bg-select-2x-offset-y: -28px;
 $bg-select-2x-width: 22px;
 $bg-select-2x-height: 12px;
 $bg-select-2x-total-width: 322px;
-$bg-select-2x-total-height: 58px;
+$bg-select-2x-total-height: 92px;
 $bg-select-2x-image: '../images/ico/icons@2x.png';
-$bg-select-2x: (30px, 28px, -30px, -28px, 22px, 12px, 322px, 58px, '../images/ico/icons@2x.png', 'bg_select@2x', );
+$bg-select-2x: (218px, 28px, -218px, -28px, 22px, 12px, 322px, 92px, '../images/ico/icons@2x.png', 'bg_select@2x', );
 $ico-header-search-2x-name: 'ico_header_search@2x';
-$ico-header-search-2x-x: 0px;
+$ico-header-search-2x-x: 188px;
 $ico-header-search-2x-y: 28px;
-$ico-header-search-2x-offset-x: 0px;
+$ico-header-search-2x-offset-x: -188px;
 $ico-header-search-2x-offset-y: -28px;
 $ico-header-search-2x-width: 30px;
 $ico-header-search-2x-height: 30px;
 $ico-header-search-2x-total-width: 322px;
-$ico-header-search-2x-total-height: 58px;
+$ico-header-search-2x-total-height: 92px;
 $ico-header-search-2x-image: '../images/ico/icons@2x.png';
-$ico-header-search-2x: (0px, 28px, 0px, -28px, 30px, 30px, 322px, 58px, '../images/ico/icons@2x.png', 'ico_header_search@2x', );
+$ico-header-search-2x: (188px, 28px, -188px, -28px, 30px, 30px, 322px, 92px, '../images/ico/icons@2x.png', 'ico_header_search@2x', );
 $logo-2x-name: 'logo@2x';
 $logo-2x-x: 0px;
 $logo-2x-y: 0px;
@@ -72,30 +116,34 @@ $logo-2x-offset-y: 0px;
 $logo-2x-width: 322px;
 $logo-2x-height: 28px;
 $logo-2x-total-width: 322px;
-$logo-2x-total-height: 58px;
+$logo-2x-total-height: 92px;
 $logo-2x-image: '../images/ico/icons@2x.png';
-$logo-2x: (0px, 0px, 0px, 0px, 322px, 28px, 322px, 58px, '../images/ico/icons@2x.png', 'logo@2x', );
+$logo-2x: (0px, 0px, 0px, 0px, 322px, 28px, 322px, 92px, '../images/ico/icons@2x.png', 'logo@2x', );
 $spritesheet-width: 161px;
-$spritesheet-height: 29px;
+$spritesheet-height: 46px;
 $spritesheet-image: '../images/ico/icons.png';
-$spritesheet-sprites: ($bg-select, $ico-header-search, $logo, );
-$spritesheet: (161px, 29px, '../images/ico/icons.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $bg-select, $ico-header-search, $logo, );
+$spritesheet: (161px, 46px, '../images/ico/icons.png', $spritesheet-sprites, );
 $retina-spritesheet-width: 322px;
-$retina-spritesheet-height: 58px;
+$retina-spritesheet-height: 92px;
 $retina-spritesheet-image: '../images/ico/icons@2x.png';
-$retina-spritesheet-sprites: ($bg-select-2x, $ico-header-search-2x, $logo-2x, );
-$retina-spritesheet: (322px, 58px, '../images/ico/icons@2x.png', $retina-spritesheet-sprites, );
+$retina-spritesheet-sprites: ($bg-header-funkplay-off-2x, $bg-header-funkplay-on-2x, $bg-select-2x, $ico-header-search-2x, $logo-2x, );
+$retina-spritesheet: (322px, 92px, '../images/ico/icons@2x.png', $retina-spritesheet-sprites, );
 
 // These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
 //
 // The list formatted variables are intended for mixins like `retina-sprite` and `retina-sprites`.
+$bg-header-funkplay-off-group-name: 'bg_header_funkplay_off';
+$bg-header-funkplay-off-group: ('bg_header_funkplay_off', $bg-header-funkplay-off, $bg-header-funkplay-off-2x, );
+$bg-header-funkplay-on-group-name: 'bg_header_funkplay_on';
+$bg-header-funkplay-on-group: ('bg_header_funkplay_on', $bg-header-funkplay-on, $bg-header-funkplay-on-2x, );
 $bg-select-group-name: 'bg_select';
 $bg-select-group: ('bg_select', $bg-select, $bg-select-2x, );
 $ico-header-search-group-name: 'ico_header_search';
 $ico-header-search-group: ('ico_header_search', $ico-header-search, $ico-header-search-2x, );
 $logo-group-name: 'logo';
 $logo-group: ('logo', $logo, $logo-2x, );
-$retina-groups: ($bg-select-group, $ico-header-search-group, $logo-group, );
+$retina-groups: ($bg-header-funkplay-off-group, $bg-header-funkplay-on-group, $bg-select-group, $ico-header-search-group, $logo-group, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
