상품상세 작업중, swiper 파일 추가

--- a/src/assets/css/_sprite.scss
+++ b/src/assets/css/_sprite.scss
@@ -32,27 +32,38 @@ $bg-header-funkplay-on-total-height: 46px;
 $bg-header-funkplay-on-image: '../images/ico/icons.png';
 $bg-header-funkplay-on: (47px, 14px, -47px, -14px, 47px, 32px, 161px, 46px, '../images/ico/icons.png', 'bg_header_funkplay_on', );
 $bg-select-name: 'bg_select';
-$bg-select-x: 109px;
+$bg-select-x: 125px;
 $bg-select-y: 14px;
-$bg-select-offset-x: -109px;
+$bg-select-offset-x: -125px;
 $bg-select-offset-y: -14px;
 $bg-select-width: 11px;
 $bg-select-height: 6px;
 $bg-select-total-width: 161px;
 $bg-select-total-height: 46px;
 $bg-select-image: '../images/ico/icons.png';
-$bg-select: (109px, 14px, -109px, -14px, 11px, 6px, 161px, 46px, '../images/ico/icons.png', 'bg_select', );
+$bg-select: (125px, 14px, -125px, -14px, 11px, 6px, 161px, 46px, '../images/ico/icons.png', 'bg_select', );
 $ico-header-search-name: 'ico_header_search';
-$ico-header-search-x: 94px;
+$ico-header-search-x: 110px;
 $ico-header-search-y: 14px;
-$ico-header-search-offset-x: -94px;
+$ico-header-search-offset-x: -110px;
 $ico-header-search-offset-y: -14px;
 $ico-header-search-width: 15px;
 $ico-header-search-height: 15px;
 $ico-header-search-total-width: 161px;
 $ico-header-search-total-height: 46px;
 $ico-header-search-image: '../images/ico/icons.png';
-$ico-header-search: (94px, 14px, -94px, -14px, 15px, 15px, 161px, 46px, '../images/ico/icons.png', 'ico_header_search', );
+$ico-header-search: (110px, 14px, -110px, -14px, 15px, 15px, 161px, 46px, '../images/ico/icons.png', 'ico_header_search', );
+$ico-star-name: 'ico_star';
+$ico-star-x: 94px;
+$ico-star-y: 14px;
+$ico-star-offset-x: -94px;
+$ico-star-offset-y: -14px;
+$ico-star-width: 16px;
+$ico-star-height: 16px;
+$ico-star-total-width: 161px;
+$ico-star-total-height: 46px;
+$ico-star-image: '../images/ico/icons.png';
+$ico-star: (94px, 14px, -94px, -14px, 16px, 16px, 161px, 46px, '../images/ico/icons.png', 'ico_star', );
 $logo-name: 'logo';
 $logo-x: 0px;
 $logo-y: 0px;
@@ -87,27 +98,38 @@ $bg-header-funkplay-on-2x-total-height: 92px;
 $bg-header-funkplay-on-2x-image: '../images/ico/icons@2x.png';
 $bg-header-funkplay-on-2x: (94px, 28px, -94px, -28px, 94px, 64px, 322px, 92px, '../images/ico/icons@2x.png', 'bg_header_funkplay_on@2x', );
 $bg-select-2x-name: 'bg_select@2x';
-$bg-select-2x-x: 218px;
+$bg-select-2x-x: 250px;
 $bg-select-2x-y: 28px;
-$bg-select-2x-offset-x: -218px;
+$bg-select-2x-offset-x: -250px;
 $bg-select-2x-offset-y: -28px;
 $bg-select-2x-width: 22px;
 $bg-select-2x-height: 12px;
 $bg-select-2x-total-width: 322px;
 $bg-select-2x-total-height: 92px;
 $bg-select-2x-image: '../images/ico/icons@2x.png';
-$bg-select-2x: (218px, 28px, -218px, -28px, 22px, 12px, 322px, 92px, '../images/ico/icons@2x.png', 'bg_select@2x', );
+$bg-select-2x: (250px, 28px, -250px, -28px, 22px, 12px, 322px, 92px, '../images/ico/icons@2x.png', 'bg_select@2x', );
 $ico-header-search-2x-name: 'ico_header_search@2x';
-$ico-header-search-2x-x: 188px;
+$ico-header-search-2x-x: 220px;
 $ico-header-search-2x-y: 28px;
-$ico-header-search-2x-offset-x: -188px;
+$ico-header-search-2x-offset-x: -220px;
 $ico-header-search-2x-offset-y: -28px;
 $ico-header-search-2x-width: 30px;
 $ico-header-search-2x-height: 30px;
 $ico-header-search-2x-total-width: 322px;
 $ico-header-search-2x-total-height: 92px;
 $ico-header-search-2x-image: '../images/ico/icons@2x.png';
-$ico-header-search-2x: (188px, 28px, -188px, -28px, 30px, 30px, 322px, 92px, '../images/ico/icons@2x.png', 'ico_header_search@2x', );
+$ico-header-search-2x: (220px, 28px, -220px, -28px, 30px, 30px, 322px, 92px, '../images/ico/icons@2x.png', 'ico_header_search@2x', );
+$ico-star-2x-2x-name: 'ico_star@2x@2x';
+$ico-star-2x-2x-x: 188px;
+$ico-star-2x-2x-y: 28px;
+$ico-star-2x-2x-offset-x: -188px;
+$ico-star-2x-2x-offset-y: -28px;
+$ico-star-2x-2x-width: 32px;
+$ico-star-2x-2x-height: 32px;
+$ico-star-2x-2x-total-width: 322px;
+$ico-star-2x-2x-total-height: 92px;
+$ico-star-2x-2x-image: '../images/ico/icons@2x.png';
+$ico-star-2x-2x: (188px, 28px, -188px, -28px, 32px, 32px, 322px, 92px, '../images/ico/icons@2x.png', 'ico_star@2x@2x', );
 $logo-2x-name: 'logo@2x';
 $logo-2x-x: 0px;
 $logo-2x-y: 0px;
@@ -122,12 +144,12 @@ $logo-2x: (0px, 0px, 0px, 0px, 322px, 28px, 322px, 92px, '../images/ico/icons@2x
 $spritesheet-width: 161px;
 $spritesheet-height: 46px;
 $spritesheet-image: '../images/ico/icons.png';
-$spritesheet-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $bg-select, $ico-header-search, $logo, );
+$spritesheet-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $bg-select, $ico-header-search, $ico-star, $logo, );
 $spritesheet: (161px, 46px, '../images/ico/icons.png', $spritesheet-sprites, );
 $retina-spritesheet-width: 322px;
 $retina-spritesheet-height: 92px;
 $retina-spritesheet-image: '../images/ico/icons@2x.png';
-$retina-spritesheet-sprites: ($bg-header-funkplay-off-2x, $bg-header-funkplay-on-2x, $bg-select-2x, $ico-header-search-2x, $logo-2x, );
+$retina-spritesheet-sprites: ($bg-header-funkplay-off-2x, $bg-header-funkplay-on-2x, $bg-select-2x, $ico-header-search-2x, $ico-star-2x-2x, $logo-2x, );
 $retina-spritesheet: (322px, 92px, '../images/ico/icons@2x.png', $retina-spritesheet-sprites, );
 
 // These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
@@ -141,9 +163,11 @@ $bg-select-group-name: 'bg_select';
 $bg-select-group: ('bg_select', $bg-select, $bg-select-2x, );
 $ico-header-search-group-name: 'ico_header_search';
 $ico-header-search-group: ('ico_header_search', $ico-header-search, $ico-header-search-2x, );
+$ico-star-group-name: 'ico_star';
+$ico-star-group: ('ico_star', $ico-star, $ico-star-2x-2x, );
 $logo-group-name: 'logo';
 $logo-group: ('logo', $logo, $logo-2x, );
-$retina-groups: ($bg-header-funkplay-off-group, $bg-header-funkplay-on-group, $bg-select-group, $ico-header-search-group, $logo-group, );
+$retina-groups: ($bg-header-funkplay-off-group, $bg-header-funkplay-on-group, $bg-select-group, $ico-header-search-group, $ico-star-group, $logo-group, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
