--- a/src/assets/css/_breakpoints.scss
+++ b/src/assets/css/_breakpoints.scss
@@ -1,4 +1,14 @@
-@mixin mobile($max-width: 1080px) {
+@mixin desksm($max-width: 1400px) {
+	@media only screen and (max-width: $max-width) {
+			@content;
+	}
+}
+@mixin mobile($max-width: 750px) {
+	@media only screen and (max-width: $max-width) {
+			@content;
+	}
+}
+@mixin custom($max-width: $max-width) {
 	@media only screen and (max-width: $max-width) {
 			@content;
 	}
