--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -257,3 +257,57 @@ textarea {
 		color: #777;
 	}
 }
+
+.accord_wrap {
+	.accord_item {
+		box-sizing: content-box;
+		overflow: hidden;
+	}
+	.accord_title {
+		display: block;
+		color: #000000;
+		text-decoration: none;
+		outline: 0;
+		cursor: pointer;
+		&[aria-expanded="true"] {
+			.accord_target i {
+				-webkit-transform: rotate(0deg);
+				transform: rotate(0deg);
+			}
+		}
+	}
+	.accord_target {
+		display:block;
+		position:relative;
+		font-weight: 500;
+		outline: none;
+		i {
+			position: absolute;
+			right:0;
+			top:50%;
+			margin-top:-3px;
+			display: inline-block;
+			line-height: inherit;
+			vertical-align: middle;
+			width: 7px;
+			height: 7px;
+			border-top:5px solid none;
+			border-bottom:6px solid #333;
+			border-right: 5px solid transparent;
+			border-left: 5px solid  transparent;
+			-webkit-transform: rotate(180deg);
+			transform: rotate(180deg);
+			box-sizing: border-box;
+		}
+
+	}
+	[data-status="disabled"] .accord_panel{
+		display: none;
+	}
+	.accord_panel {
+		outline: 0;
+		&[aria-hidden="true"] {
+			display: none;
+		}
+	}
+}
